Fylo Page  (desktop size)

--- a/index.html
+++ b/index.html
@@ -38,22 +38,34 @@
                 <img src="./images/illustration-1.svg" alt="">
             </div>
 
+            <div class="illustration1_desktop">
+                <img src="./images/illustration-1.svg" alt="">
+            </div>
+
             <div class="section-texts">
                 <h1>All your files in one secure location, accessible anywhere.</h1>
                 <p>Fylo stores your most important files in one secure location. Access them wherever you need, share and collaborate with friends, family, and co-workers.</p>
 
-                <div class="enter-email">
-                    <h6>Enter your email…</h6>
+                <div class="getstarted-mail_containers">
+                    <div class="enter-email">
+                        <h6>Enter your email…</h6>
+                    </div>
+
+                    <div class="getstarted">
+                        <h6>Get Started</h6>
+                    </div>
                 </div>
-                <div class="getstarted">
-                    <h6>Get Started</h6>
-                </div>
+               
             </div>
         </div>
 
 
         <div class="bg-curve">
             <img src="./images/bg-curve-mobile.svg" alt="">
+        </div>
+
+        <div class="bg-curve-desk">
+            <img src="./images/bg-curve-desktop.svg" alt="">
         </div>
 
 
